# mv_app

./: .gitignore  README.md  pyproject.toml  tools.md
src/: gui.py  main.py  pipeline.py  ui_ux.py
src/lib/: fps_monitor.py  frame.py  frame_sources.py  trt.py  ui_filepicker.py  ui_video_webrtc.py  utils.py  uvc_cam.py
src/lib/static/: webrtc_client.js
tests_scripts/: webcam.py  yoloembedings.py
